# ai_chat

./: .gitignore  .gitmodules  Cargo.toml  start.sh
src/: ai.rs  chat.rs  main.rs
