[package]
name = "ai_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api = "0.1.5-alpha.0"

[patch.crates-io]
openai-api = { path = "./openai-api-rust" }

[build]
jobs = 1

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = false
incremental = false
strip = true
split-debuginfo = "packed"